style: fix spacing around post

--- a/frontend/src/styles/post.css
+++ b/frontend/src/styles/post.css
@@ -1,10 +1,11 @@
 .post-container {
   display: flex;
   flex-direction: column;
-  width: 100%;
+  width: 50%;
   padding: 10px;
   border: 1px solid;
   border-radius: 10px;
+  margin: 10px;
 }
 
 .post-header {
@@ -34,6 +35,14 @@
 .post-body {
   display: flex;
   flex-direction: column;
+}
+
+.post-image {
+  max-width: 100%;
+  height: auto;
+  object-fit: contain;
+  margin: 10px;
+  border-radius: 10px;
 }
 
 .post-footer {
